--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Simone Schaub-Meyer"
   avatar           : "profile.jpg"
-  bio              : "Your biography for the left-hand sidebar"
+  bio              : "Postdoctoral Researcher"
   location         : "Germany & Switzerland"
   employer         : "TU Darmstadt"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
