--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Simone Schaub-Meyer"
 title_separator          : "-"
 name                     : &name "Simone Schaub-Meyer"
-description              : &description "Postdoctoral Researcher"
+description              : &description "Postdoctoral Researcher | Head of research group EVA"
 url                      : https://schaubsi.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "schaubsi/schaubsi.github.io"
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Simone Schaub-Meyer"
   avatar           : "profile.jpg"
-  bio              : "Postdoctoral Researcher"
+  bio              : "Postdoctoral Researche | Head of research group EVA"
   location         : "Germany & Switzerland"
   employer         : "TU Darmstadt"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
