--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Simone Schaub-Meyer"
-  avatar           : "profile.jpg"
+  avatar           : "profile_2.jpg"
   bio              : "Postdoctoral Researche | Head of research group EVA"
   location         : "Germany & Switzerland"
   employer         : "TU Darmstadt"
