--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Simone Schaub-Meyer"
 title_separator          : "-"
 name                     : &name "Simone Schaub-Meyer"
-description              : &description "Postdoctoral Researcher | Head of research group EVA"
+description              : &description "Research Group Leader"
 url                      : https://schaubsi.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "schaubsi/schaubsi.github.io"
