--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Simone Schaub-Meyer"
   avatar           : "profile_2.jpg"
-  bio              : "Independent research group leader"
+  bio              : "Assistant Professor"
   location         : "Germany & Switzerland"
   employer         : "TU Darmstadt"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
